Treat a "mime type" of "replace" as "text/html".  Bug 313217, r+sr=jst